--- a/index.html
+++ b/index.html
@@ -3,31 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>プリフロップ練習</title>
+  <title>Preflop Trainer</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="script.js" defer></script>
 </head>
 <body>
   <h1>Preflop Trainer</h1>
 
-  <div class="mode-toggle">
+  <div id="modeButtons">
     <button id="btnOpen" class="active" onclick="setMode('vs_open')">オープン判断</button>
     <button id="btnCold" onclick="setMode('vs_cold')">コールド対応</button>
   </div>
 
-  <div id="info" class="info"></div>
-  <div id="hand" class="hand"></div>
-
-  <div class="table">
-    <div class="seat" id="seat-0">UTG</div>
-    <div class="seat" id="seat-1">MP</div>
-    <div class="seat" id="seat-2">CO</div>
-    <div class="seat" id="seat-3">BTN</div>
-    <div class="seat" id="seat-4">SB</div>
-    <div class="seat" id="seat-5">BB</div>
+  <div id="table">
+    <div id="seat-0" class="seat">UTG</div>
+    <div id="seat-1" class="seat">MP</div>
+    <div id="seat-2" class="seat">CO</div>
+    <div id="seat-3" class="seat">BTN</div>
+    <div id="seat-4" class="seat">SB</div>
+    <div id="seat-5" class="seat">BB</div>
   </div>
 
-  <div id="actionButtons" class="actions"></div>
-  <div id="result" class="result"></div>
+  <div id="questionArea">
+    <p id="info"></p>
+    <p id="hand"></p>
+  </div>
+
+  <div id="actionButtons"></div>
+  <p id="result"></p>
+  <button id="nextButton" onclick="generateSituation()">次の問題</button>
+
+  <script src="script.js"></script>
 </body>
 </html>
