--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <title>Preflop Trainer</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="icon.png" type="image/png" />
@@ -23,6 +23,7 @@
   <p id="handText"></p>
   <div id="actionButtons"></div>
   <p id="resultText"></p>
+  <button id="nextButton">次の問題</button>
 
   <script src="script.js"></script>
 </body>
