--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <h1>Preflop Trainer</h1>
 
   <div id="tabs">
-    <button class="tab-button active" data-mode="open_none">オープン判断</button>
-    <button class="tab-button" data-mode="vs_open">vs オープン</button>
-    <button class="tab-button" data-mode="vs_3bet">vs 3ベット</button>
+    <button class="tab-button active" data-mode="open_none">Open Raise</button>
+    <button class="tab-button" data-mode="vs_open">VS Open</button>
+    <button class="tab-button" data-mode="vs_3bet">VS 3Bet</button>
+    <button class="tab-button" data-mode="bb_defense">BB Defense</button>
   </div>
 
   <div id="table" class="table"></div>
@@ -23,7 +24,7 @@
   <p id="handText"></p>
   <div id="actionButtons"></div>
   <p id="resultText"></p>
-  <button id="nextButton">次の問題</button>
+  <button id="nextButton">NEXT</button>
 
   <script src="script.js"></script>
 </body>
